--- a/bubble-springboot/bubble-springboot-web/src/main/resources/templates/login.html
+++ b/bubble-springboot/bubble-springboot-web/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
     <meta name="description" content="此代码内容为超萌的猫头鹰登录界面"/>
 
     <title>超萌的猫头鹰登录界面</title>
-    <script src="js/component/include.js"></script>
+    <script src="static/js/component/include.js"></script>
     <script type="text/javascript">
         $(function () {
             $('#login #password').focus(function () {
@@ -19,7 +19,7 @@
             $("#doLogin").click(function (e) {
                 $.ajax({
                     type: "POST",
-                    url: window.ctxPaths + "/login.ajax",
+                    url: window.ctxPaths + "/login",
                     data: {
                         "username": $("#username").val(),
                         "password": $("#password").val()
@@ -38,11 +38,10 @@
     </script>
 </head>
 <body>
-<!-- begin -->
 <div id="login">
     <div class="wrapper">
         <div class="login">
-            <form action="#" method="post" class="container offset1 loginform">
+            <form action="" method="post" class="container offset1 loginform">
                 <div id="owl-login">
                     <div class="hand"></div>
                     <div class="hand hand-r"></div>
@@ -55,16 +54,19 @@
                     <input type="hidden" name="_csrf" value="9IAtUxV2CatyxHiK2LxzOsT6wtBE6h8BpzOmk="/>
                     <div class="control-group">
                         <div class="controls">
-                            <label for="username" class="control-label"><i class="fa fa-user"
-                                                                           aria-hidden="true"></i></label>
+                            <label for="username" class="control-label">
+                                <i class="fa fa-user" aria-hidden="true"></i>
+                            </label>
                             <input id="username" type="text" name="email" placeholder="账号" tabindex="1"
                                    autofocus="autofocus" class="form-control input-medium"/>
                         </div>
                     </div>
                     <div class="control-group">
                         <div class="controls">
-                            <label for="password" class="control-label"><i class="fa fa-key"
-                                                                           aria-hidden="true"></i></label>
+                            <label for="password" class="control-label">
+                                <i class="fa fa-key"
+                                   aria-hidden="true"></i>
+                            </label>
                             <input id="password" type="password" name="password" placeholder="密码" tabindex="2"
                                    class="form-control input-medium"/>
                         </div>
@@ -72,12 +74,14 @@
                 </div>
                 <div class="form-actions"><a href="#" tabindex="5" class="btn pull-left btn-link text-muted">Forgot
                     password?</a><a href="#" tabindex="6" class="btn btn-link text-muted">Sign Up</a>
-                    <button type="button" id="doLogin" tabindex="4" class="btn btn-primary">Login</button>
+                    <button type="submit" tabindex="4" class="btn btn-primary">Login</button>
+                </div>
+                <div class="pad">
+                    错误信息：<h4 th:text="${msg}"></h4>
                 </div>
             </form>
         </div>
     </div>
 </div>
-<!-- end -->
 </body>
 </html>
