--- a/bubble-springboot/bubble-springboot-web/src/main/resources/templates/login.html
+++ b/bubble-springboot/bubble-springboot-web/src/main/resources/templates/login.html
@@ -57,7 +57,7 @@
                             <label for="username" class="control-label">
                                 <i class="fa fa-user" aria-hidden="true"></i>
                             </label>
-                            <input id="username" type="text" name="email" placeholder="账号" tabindex="1"
+                            <input id="username" type="text" name="username" placeholder="账号" tabindex="1"
                                    autofocus="autofocus" class="form-control input-medium"/>
                         </div>
                     </div>
