--- a/bubble-component/bubble-component-shiro/src/main/resources/templates/userInfoAdd.html
+++ b/bubble-component/bubble-component-shiro/src/main/resources/templates/userInfoAdd.html
@@ -10,23 +10,17 @@
 <h1>添加用户</h1>
 <br/><br/>
 <div class="with:80%">
-    <form class="form-horizontal" th:action="@{/add}" method="post">
+    <form class="form-horizontal" th:action="@{/userInfo/thymeleaf/add}" method="post">
         <div class="form-group">
             <label for="userName" class="col-sm-2 control-label">userName</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" name="userName" id="userName" placeholder="userName"/>
+                <input type="text" class="form-control" name="username" id="username" placeholder="username"/>
             </div>
         </div>
         <div class="form-group">
             <label for="password" class="col-sm-2 control-label">Password</label>
             <div class="col-sm-10">
                 <input type="password" class="form-control" name="password" id="password" placeholder="Password"/>
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="age" class="col-sm-2 control-label">age</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" name="age" id="age" placeholder="age"/>
             </div>
         </div>
         <div class="form-group">
