--- a/bubble-component/bubble-component-shiro/src/main/resources/templates/userInfoEdit.html
+++ b/bubble-component/bubble-component-shiro/src/main/resources/templates/userInfoEdit.html
@@ -10,12 +10,12 @@
 <h1>修改用户</h1>
 <br/><br/>
 <div class="with:80%">
-    <form class="form-horizontal" th:action="@{/edit}" th:object="${user}" method="post">
-        <input type="hidden" name="id" th:value="*{id}"/>
+    <form class="form-horizontal" th:action="@{/userInfo/thymeleaf/edit}" th:object="${user}" method="post">
+        <input type="hidden" name="uid" th:value="*{uid}"/>
         <div class="form-group">
             <label for="userName" class="col-sm-2 control-label">userName</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" name="userName" id="userName" th:value="*{userName}"
+                <input type="text" class="form-control" name="username" id="username" th:value="*{username}"
                        placeholder="userName"/>
             </div>
         </div>
@@ -27,16 +27,10 @@
             </div>
         </div>
         <div class="form-group">
-            <label for="age" class="col-sm-2 control-label">age</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" name="age" id="age" th:value="*{age}" placeholder="age"/>
-            </div>
-        </div>
-        <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
                 <input type="submit" value="Submit" class="btn btn-info"/>
                 &nbsp; &nbsp; &nbsp;
-                <a href="/toAdd" th:href="@{/list}" class="btn btn-info">Back</a>
+                <a href="/userInfo/thymeleaf/toAdd" th:href="@{/userInfo/thymeleaf/list}" class="btn btn-info">Back</a>
             </div>
 
         </div>
